fixing overflow and color on drop nav for responsive

--- a/src/styles/site.less
+++ b/src/styles/site.less
@@ -158,6 +158,11 @@ ul.nav-tabs li {
 		background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%);
 		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3c3c3c', endColorstr='#ff222222', GradientType=0);
 		filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+
+		&.navbar-nav {
+			margin-left: 0;
+			margin-right: 0;
+		}
 	}
 }
 
